# impactx

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AGENTS.md  CMakeLists.txt  CONTRIBUTING.rst  MANIFEST.in  README.md  check_k2_zero.py  context7.json  match_beam.py  match_runtimes.txt  pyproject.toml  requirements.txt  setup.py
.github/: update_stub.sh
.github/workflows/: codeql.yml  cuda.yml  hip.yml  macos.yml  source.yml  stubs.yml  tooling.yml  ubuntu.yml  windows.yml
cmake/: ImpactXFunctions.cmake
cmake/dependencies/: ABLASTR.cmake  pyAMReX.cmake  pybind11.cmake
docs/: Doxyfile  README.md  conda.yml  requirements.txt
docs/doxygen/: main.dox
docs/source/: acknowledge_us.rst  conf.py  index.rst
examples/: CMakeLists.txt  requirements.txt
examples/achromatic_spectrometer/: analysis_spectrometer.py  input_spectrometer.in  run_spectrometer.py
examples/active_plasma_lens/: README.rst  analysis_APL.py  analysis_APL_ChrPlasmaLens.py  analysis_APL_ChrPlasmaLens_defocusing.py  analysis_APL_ChrPlasmaLens_focusing.py  analysis_APL_ChrPlasmaLens_zero.py  analysis_APL_envelope_defocusing.py  analysis_APL_envelope_focusing.py  analysis_APL_envelope_zero.py  analysis_APL_tracking_defocusing.py  analysis_APL_tracking_focusing.py  analysis_APL_tracking_zero.py  plot_APL.py  plot_APL_ChrPlasmaLens.py  plot_APL_ChrPlasmaLens_analytical.py  plot_APL_ChrPlasmaLens_defocusing.py  plot_APL_ChrPlasmaLens_focusing.py  plot_APL_ChrPlasmaLens_zero.py  plot_APL_analytical.py  plot_APL_defocusing.py  plot_APL_focusing.py  plot_APL_tracking_defocusing.py  plot_APL_tracking_focusing.py  plot_APL_tracking_zero.py  plot_APL_zero.py  run_APL.py  run_APL_ChrPlasmaLens.py  run_APL_ChrPlasmaLens_defocusing.py  run_APL_ChrPlasmaLens_focusing.py  run_APL_ChrPlasmaLens_tracking_zero.py  run_APL_ChrPlasmaLens_zero.py  run_APL_ConstF_envelope_defocusing.py  run_APL_ConstF_envelope_focusing.py  run_APL_ConstF_envelope_zero.py  run_APL_ConstF_tracking_defocusing.py  run_APL_ConstF_tracking_focusing.py  run_APL_ConstF_tracking_zero.py
examples/alignment/: analysis_alignment.py  input_alignment.in  run_alignment.py
examples/aperture/: README.rst  analysis_absorber.py  analysis_aperture_periodic.py  analysis_aperture_thick.py  input_absorber.in  input_aperture.in  input_aperture_periodic.in  input_aperture_thick.in  run_absorber.py  run_aperture.py  run_aperture_periodic.py  run_aperture_thick.py
examples/apochromatic/: analysis_apochromatic.py  analysis_apochromatic_pl.py  input_apochromatic.in  (+3 more)
src/: CMakeLists.txt  CompensatedReal.H  Hooks.cpp  ImpactX.H  ImpactX.cpp  main.cpp
src/elements/: All.H  Aperture.H  Aperture.cpp  Buncher.H  Buncher.cpp  CFbend.H  CFbend.cpp  CMakeLists.txt  ChrDrift.H  ChrDrift.cpp  ChrPlasmaLens.H  ChrPlasmaLens.cpp  ChrQuad.H  ChrQuad.cpp  ChrUniformAcc.H  ChrUniformAcc.cpp  ConstF.H  ConstF.cpp  DipEdge.H  DipEdge.cpp  Drift.H  Drift.cpp  Empty.H  ExactCFbend.H  ExactCFbend.cpp  ExactDrift.H  ExactDrift.cpp  ExactMultipole.H  ExactMultipole.cpp  ExactQuad.H  ExactQuad.cpp  ExactSbend.H  ExactSbend.cpp  Kicker.H  Kicker.cpp  LinearMap.H  LinearMap.cpp  MagnetostaticVectorPotential.H  MagnetostaticVectorPotential.cpp  Marker.H  (+37 more)
src/elements/diagnostics/: AdditionalProperties.cpp  BeamMonitor.H  BeamMonitor.cpp  CMakeLists.txt  openPMD.H  openPMD.cpp
src/elements/mixin/: TrackedVector.H  alignment.H  beamoptic.H  beamoptic_spin.H  dynamicdata.H  lineartransport.H  named.H  nofinalize.H  pipeaperture.H  spintransport.H  thick.H  thin.H
src/elements/transformation/: CMakeLists.txt  Insert.H  Insert.cpp
src/synmadx/: CMakeLists.txt
src/synmadx/python/: synmadx_pywrap.cc
src/synmadx/synergia/foundation/: four_momentum.h  physical_constants.h  reference_particle.h
src/synmadx/synergia/lattice/: lattice.cc  lattice.h  lattice_element.cc  lattice_element.h  lattice_element_processor.cc  lattice_tree.h  madx.cc  madx.h  mx_expr.h
src/synmadx/synergia/utils/boost/algorithm/string/detail/: finder.hpp
src/synmadx/synergia/utils/boost/container_hash/detail/: hash_mix.hpp
src/synmadx/synergia/utils/boost/spirit/home/x3/numeric/: bool.hpp
src/synmadx/tests/: CMakeLists.txt  test_dynamic_lattice.cc  test_lattice.cc  test_madx_parser.cc
synergia/: __init__.py  version.py.in
(+1142 files in other folders)
